# vmdk

./: .gitleaks.toml  .pre-commit-config.yaml  Cargo.toml  README.md  clippy.toml  deny.toml  renovate.json
.github/workflows/: ci.yml  fuzz.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli.rs
core/: Cargo.toml  README.md
core/examples/: emit_fixture.rs
core/src/: bytes.rs  chain.rs  header.rs  recovery.rs
core/tests/: synthetic.rs
corpus/: fetch.sh
docs/: corpus-validation.md  implementation-notes.md  privacy.md  terms.md  validation.md
forensic/: Cargo.toml  README.md
forensic/src/: lib.rs
forensic/tests/: corpus.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_open/: flat-f001.vmdk  flat.vmdk  minimal.vmdk  stream_opt.vmdk
fuzz/fuzz_targets/: fuzz_open.rs
vmdk/: Cargo.toml
vmdk-cli/: Cargo.toml
vmdk-cli/src/: main.rs
vmdk-cli/tests/: cli.rs
vmdk-forensic/: Cargo.toml  README.md
vmdk-forensic/src/: lib.rs
vmdk-forensic/tests/: corpus.rs
vmdk/examples/: emit_fixture.rs
vmdk/proptest-regressions/: lib.txt
vmdk/src/: chain.rs  cowd.rs  ddb.rs  descriptor.rs  error.rs  flat.rs  header.rs  lib.rs  read.rs  sesparse.rs  sparse_multi.rs  testutil.rs
vmdk/tests/: corpus.rs  real_images.rs  synthetic.rs
vmdk/tests/data/: README.md  flat.vmdk  minimal.vmdk  stream_opt.vmdk
